[package]
name = "block-bot"
version = "0.1.0"
authors = ["Euraxluo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { version = "1", features = ["ws","rustls"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
serde_json = "1.0.81"
ethabi-next = "13.2.0"
rustc-hex = "2.1.0"
thiserror = "1.0.31"
rand = "0.8.4"
tracing = "0.1.34"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.11"
tracing-appender = "0.2.2"